--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -95,7 +95,7 @@
 
 #dark-btn.dark-btn-on {
   padding-left: 23px;
-  background: #0a0a0a;
+  background: #1d1b1b;
 }
 
 * {
@@ -106,8 +106,22 @@
           box-sizing: border-box;
 }
 
+:root {
+  --body-color: #efefef;
+  --nav-color: #1876f2;
+  --bg-color: #fff;
+}
+
+.dark-theme {
+  --body-color: #0a0a0a;
+  --nav-color: #000;
+  --bg-color: #000;
+}
+
 body {
-  background: #efefef;
+  background: var(--body-color);
+  -webkit-transition: background 0.3s;
+  transition: background 0.3s;
 }
 
 nav {
@@ -120,7 +134,7 @@ nav {
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
-  background: #1876f2;
+  background: var(--nav-color);
   padding: 5px 5%;
   position: -webkit-sticky;
   position: sticky;
@@ -200,7 +214,7 @@ nav .settings-menu {
   position: absolute;
   width: 90%;
   max-width: 350px;
-  background: #fff;
+  background: var(--bg-color);
   -webkit-box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
           box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
   border-radius: 4px;
@@ -220,6 +234,12 @@ nav .settings-menu .settings-menu-inner .user-profile a {
   font-size: 12px;
   color: #1876f2;
   text-decoration: none;
+}
+
+nav .settings-menu .settings-menu-inner .user-profile p {
+  margin-bottom: -5px;
+  font-weight: 500;
+  color: #626262;
 }
 
 nav .settings-menu .settings-menu-inner hr {
@@ -349,7 +369,7 @@ nav .settings-menu .settings-menu-inner .settings-links a {
   top: 70px;
   -ms-flex-item-align: start;
       align-self: flex-start;
-  background: #fff;
+  background: var(--bg-color);
   padding: 20px;
   border-radius: 4px;
   color: #626262;
@@ -512,7 +532,7 @@ nav .settings-menu .settings-menu-inner .settings-links a {
 
 .container .main-content .write-post-container {
   width: 100%;
-  background: #fff;
+  background: var(--bg-color);
   border-radius: 6px;
   padding: 20px;
   color: #626262;
@@ -569,7 +589,7 @@ nav .settings-menu .settings-menu-inner .settings-links a {
 
 .container .main-content .post-container {
   width: 100%;
-  background: #fff;
+  background: var(--bg-color);
   border-radius: 6px;
   padding: 20px;
   color: #626262;
