--- a/assets/style/main.scss
+++ b/assets/style/main.scss
@@ -9,8 +9,20 @@
   box-sizing: border-box;
 }
 
+:root {
+  --body-color: #efefef;
+  --nav-color: #1876f2;
+  --bg-color: #fff;
+}
+.dark-theme {
+  --body-color: #0a0a0a;
+  --nav-color: #000;
+  --bg-color: #000;
+}
+
 body {
-  background: $base-color;
+  background: var(--body-color);
+  transition: background 0.3s;
 }
 
 
@@ -18,7 +30,7 @@ nav {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  background: #1876f2;
+  background: var(--nav-color);
   padding: 5px 5%;
   position: sticky;
   top: 0;
@@ -85,7 +97,7 @@ nav {
     position: absolute;
     width: 90%;
     max-width: 350px;
-    background: $white;
+    background: var(--bg-color);
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.4);
     border-radius: 4px;
     overflow: hidden;
@@ -103,6 +115,13 @@ nav {
           color: #1876f2;
           text-decoration: none;
         }
+
+        p {
+          margin-bottom: -5px;
+          font-weight: 500;
+          color: #626262;
+        }
+        
       }
 
       hr {
@@ -202,7 +221,7 @@ nav {
     position: sticky;
     top: 70px;
     align-self: flex-start;
-    background: $white;
+    background: var(--bg-color);
     padding: 20px;
     border-radius: 4px;
     color: #626262;
@@ -348,7 +367,7 @@ nav {
 
     .write-post-container {
       width: 100%;
-      background: $white;
+      background: var(--bg-color);
       border-radius: 6px;
       padding: 20px;
       color: #626262;
@@ -401,7 +420,7 @@ nav {
 
     .post-container {
       width: 100%;
-      background: $white;
+      background: var(--bg-color);
       border-radius: 6px;
       padding: 20px;
       color: #626262;
