--- a/assets/style/_colors.scss
+++ b/assets/style/_colors.scss
@@ -1,3 +1,14 @@
-$base-color: #efefef;
-$white: #fff;
-$black: #000;
+:root {
+    --body-color: #f0f2f5;
+    --nav-color: #ffffff;
+    --bg-color: #fff;
+    --text-color: #202020;
+    --bg-icon: #efefef;
+  }
+  .dark-theme {
+    --body-color: #18191a;
+    --nav-color: #242526;
+    --bg-color: #242526;
+    --text-color: #ffffff;
+    --bg-icon: #373838;
+  }
